# CustomThreads

./: .gitignore  CMakeLists.txt  conanfile.txt
include/: TimeChecker.h  pcg.h
src/: CMakeLists.txt  TimeChecker.cpp  main.cpp  pcg.cpp
